# Kitestring

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package.json  pnpm-lock.yaml  release-notes.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/release/: render-notes.mjs
.github/workflows/: ci.yml  release.yml
docs/: troubleshooting.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  test_helpers.rs
src-tauri/src/commands/: config.rs  distribution.rs  mod.rs  project.rs  skill.rs  version.rs
src-tauri/src/models/: config.rs  distribution.rs  dto.rs  mod.rs  project.rs  skill.rs
src-tauri/src/services/: config.rs  diagnostics.rs  distributor.rs  git_service.rs  importer.rs  mod.rs  skill_parser.rs
src-tauri/src/utils/: path.rs
src/components/layout/: DetailPanel.tsx  SettingsPanel.tsx  Sidebar.tsx
src/components/project/: CreateProjectDialog.tsx  DistributionMatrix.tsx  ProjectPanel.tsx
src/components/skill/: FileTree.tsx  FileViewer.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  Drawer.tsx  Input.tsx  Tag.tsx  Toast.tsx
src/contexts/: UpdateContext.tsx
src/hooks/: useBreakpoint.ts  useTheme.ts
src/i18n/: I18nProvider.tsx  errors.ts  types.ts
src/i18n/locales/: en-US.ts  zh-CN.ts
src/lib/: diagnostics.ts  releaseNotes.ts  tauri.ts
src/styles/: globals.css
src/types/: index.ts
