[package]
name = "agent-nexus"
version = "0.1.0"
description = "Unified management and distribution of AI agent skills"
authors = ["balabalabalading"]
license = "MIT"
repository = "https://github.com/balabalabalading/AgentNexus"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
git2 = "0.20"

[dev-dependencies]
tempfile = "3"
