[package]
name = "kitestring"
version = "0.1.1"
description = "风筝线 — AI Agent 技能包管理与分发"
authors = ["balabalabalading"]
license = "MIT"
repository = "https://github.com/balabalabalading/Kitestring"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
git2 = "0.20"
# Force libgit2/openssl users to link OpenSSL statically so the signed macOS
# app does not depend on Homebrew dylibs that Gatekeeper refuses to load.
openssl-sys = { version = "0.9", features = ["vendored"] }

[dev-dependencies]
tempfile = "3"
